# docker-github-backup

./: .gitignore  Dockerfile  README.md  backup.sh  config.json.example  pyproject.toml  ruff.toml  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yaml  docker-image.yml
github-backup/: github-backup.py
github_backup/: __init__.py  __main__.py  cli.py  config.py  git_ops.py  github_api.py
