[build-system]
requires      = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name            = "github_backup"
dynamic         = ["version"]
requires-python = ">=3.13,<3.14"
dependencies    = ["requests~=2.32.3"]

[project.optional-dependencies]
dev = ["ruff"]

[tool.setuptools.packages.find]
include = ["github_backup"]

[tool.ruff]
exclude        = [".venv", ".vscode", "venv"]
line-length    = 120
indent-width   = 4
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style               = "double"
indent-style              = "space"
skip-magic-trailing-comma = false
line-ending               = "auto"
