[project]
name            = "github_backup"
dynamic         = ["version"]
requires-python = ">=3.13,<3.14"
dependencies    = ["requests~=2.33"]

[project.scripts]
github-backup = "github_backup.cli:main"

[dependency-groups]
dev = ["ruff>=0.15.10"]

[build-system]
requires      = ["setuptools>=82.0.1", "setuptools-scm>=10.0.5"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0.0"

[tool.setuptools.packages.find]
include = ["github_backup"]

[tool.ruff]
exclude        = [".venv", ".vscode", "venv"]
line-length    = 120
indent-width   = 4
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style               = "double"
indent-style              = "space"
skip-magic-trailing-comma = false
line-ending               = "auto"
